<resources>
    <string name="app_name">Education App</string>
    <string name="questionmarkString">\?</string>
    <string name="playString">play</string>
    <string name="scoresString">scores</string>
    <string name="settingsString">settings</string>
    <string name="quitString">quit</string>
    <string name="welcomeString">Welcome to the Education App!</string>
    <string name="mainMenuString">main menu</string>
    <string name="leaveGameString">leave game</string>
    <string name="skipString">skip</string>
    <string name="playAgainString">play again</string>
    <string name="saveScoreString">save score</string>
    <string name="userEntryHintString">Enter your name…</string>
    <string name="noScoreString">no score set</string>
    <string name="soundSettingString">Sound Settings</string>
    <string name="gameDifficultyString">Game Difficulty</string>
    <string name="easyString">Easy</string>
    <string name="standardString">Standard</string>
    <string name="hardString">Hard</string>
    <string name="soundOffString">Sound Off</string>
    <string name="soundOnString">Sound On</string>
    <string name="playSoundsString">Play Sounds</string>
    <string name="tweetString">tweet</string>
    <string name="topScoresString">Top 5 Scores</string>
    <string name="xEqualsString">X = ?</string>
</resources>
