<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/welcomeString"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="3dp"
        android:layout_weight="1"
        android:onClick="onClickMainActivity"
        android:text="@string/playString"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonScores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="3dp"
        android:layout_weight="1"
        android:onClick="onClickMainActivity"
        android:text="@string/scoresString"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="3dp"
        android:layout_weight="1"
        android:onClick="onClickMainActivity"
        android:text="@string/settingsString"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonQuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="3dp"
        android:layout_weight="1"
        android:onClick="onClickMainActivity"
        android:text="@string/quitString"
        android:textStyle="bold" />
</LinearLayout>