<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3BFFEB3B"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/questionDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" />

    <TextView
        android:id="@+id/gameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:fontFamily="casual"
        android:gravity="center"
        android:text=""
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gameButton1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="30sp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:onClick="onClickGameAnswer"
            android:text="@string/questionmarkString"
            android:textColor="#3F51B5"
            android:textColorHighlight="#AA2121"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/gameButton2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="30sp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:onClick="onClickGameAnswer"
            android:text="@string/questionmarkString"
            android:textColor="#3F51B5"
            android:textColorHighlight="#AA2121"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/gameButton3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="30sp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:onClick="onClickGameAnswer"
            android:text="@string/questionmarkString"
            android:textColor="#3F51B5"
            android:textColorHighlight="#AA2121"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gameBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClickGameActivityNav"
            android:text="@string/leaveGameString"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/gameSkipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClickGameActivityNav"
            android:text="@string/skipString"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>